{
    "name": "InputAaction_FPS",
    "maps": [
        {
            "name": "Game",
            "id": "bce9f0cb-5809-4b3b-b0e3-0ad2d21a2f0a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b2048e99-b016-4120-9b45-143e219f7399",
                    "expectedControlType": "",
                    "processors": "Clamp(max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookDelta",
                    "type": "Value",
                    "id": "958c48c0-9299-41ef-9cac-4a9a57e54cdf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookConstant",
                    "type": "Value",
                    "id": "254650fc-9900-4746-b0d2-2d2a5f645742",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9f869bf4-c3f7-456d-b0be-7e0b34b85362",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "82c40c8a-3e0c-484f-bd4a-7dc2bad08610",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "ac3420be-5ff7-4fdd-b4a6-eaf2a4ef2530",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpectatorVertical",
                    "type": "Value",
                    "id": "726f987d-1038-41ff-9a98-9bfec2b61e5b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TogglePauseMenu",
                    "type": "Button",
                    "id": "675e0e83-f286-4d05-a27b-9e2c626ff5a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RequestRespawn",
                    "type": "Button",
                    "id": "a180c98f-8298-4d38-a585-0107218aff6b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchWeapon",
                    "type": "Value",
                    "id": "801c785d-1ad0-4bc1-86a0-d90c016b9b66",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c7d9676b-a16a-47de-9fd3-6fcea1b15f3b",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=70,y=70),StickDeadzone",
                    "groups": "",
                    "action": "LookConstant",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95fec942-c5ea-4fb7-a2ef-a813f4bd704c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbf3b349-c3ce-4318-880d-0aba4d1307a8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55b1e86b-2fd6-49a0-b83b-f98f284a062b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d75fb33d-ee27-43fd-8202-43663781c432",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6de6f0c1-bb49-44a8-bf6c-d28161eeaa4e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5facb909-e07b-4561-ae66-e9588fca437e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c1f169a-df0d-4092-983f-3e6a5869c54e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f763422-e081-4701-997a-491ea836cef3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "TogglePauseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8943361-831f-4d94-936d-f049c134472a",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RequestRespawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "614bec24-4348-4cf4-91dd-dee48cd9a9d8",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "RequestRespawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "227a70ee-f267-4ec3-89fe-845c95bf9e56",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "490e72cb-d610-4aeb-9cbc-d2e47ee830de",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4ebc5804-93a0-41a9-9587-ee4b6c7ba35e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8930ef03-120a-4d91-9be9-b8a78eb0a187",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2246d30a-f706-431c-9471-b5d379eefb5f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3e8b3619-6e5f-4faa-af87-49bd40fff2df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "00901854-1954-49fc-bde2-1be48073b96d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpectatorVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5013c220-3a2e-481c-b6f3-85c0612e506c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "SpectatorVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "09a05de3-4de6-4310-9703-fe4809d773e3",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Default",
                    "action": "SpectatorVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "05bcb38e-3463-4a4e-b7a4-6ed10797af92",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpectatorVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "3801ff44-ed9f-4e5d-9e57-d0c83f8c57d4",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpectatorVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "9e717b94-fa63-476c-81dd-4622093032f5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpectatorVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "43228c90-16de-4c39-a0c6-324d395f7bd6",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.05,y=0.05)",
                    "groups": ";Default",
                    "action": "LookDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "350e6353-fb06-41d6-9bb5-207461471f8c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d7df6ec4-6020-4b1f-8868-977a9558ac52",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "0772aea8-9168-4092-888b-c84f4a4b7aa5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancle",
                    "type": "Button",
                    "id": "8b40a87d-cee0-4b9b-a4b3-a7c9410caf02",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "9986da99-79b2-4cab-bd2c-77b60f3cb510",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "2df707b0-d741-4115-9fa0-45b257255c69",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d87cc84c-1ac6-42bd-8e0d-ab900bc9bbbc",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7dde854-17f1-49a1-88b4-e90e24132a5a",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0d2e67f-a455-4452-a389-42a075e52b39",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41577d2f-2cef-45bb-b031-1b64f854f4c0",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91a200be-987c-44d1-9b65-5b34ad2656b8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03bda6bd-00d8-47c2-a6bf-bcd6e80f8789",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "055c7f70-bd34-46fb-bc5b-91c3667a8c32",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e44b4516-38bc-4eef-ac8c-5b72bffef57f",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "3e7d22a8-9b8d-4f79-8ff5-fd6c42082dd9",
            "actions": [
                {
                    "name": "ToggleSessionInfo",
                    "type": "Button",
                    "id": "97cdfb5b-830f-456a-b36c-a46fbdbd5826",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartClient",
                    "type": "Button",
                    "id": "a770e875-5f54-4b9c-a934-74406dd761ad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartClientServer",
                    "type": "Button",
                    "id": "8c0f5c46-7df3-41da-ba6d-7dff4dc08d6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReturnToMainMenu",
                    "type": "Button",
                    "id": "50882af7-3968-438a-9cc0-38f1f49f81df",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6235409d-c87b-47c3-b9fb-049336053bb9",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSessionInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8eb68ad9-f410-4e39-b4ce-8de13031c5dc",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSessionInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "242628f6-cb65-45cd-97a7-cc7463b74588",
                    "path": "<Touchscreen>/touch3/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSessionInfo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "195214ba-342b-4bf8-91aa-90fe65dcf13b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClient",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f154a3d1-301c-4b42-b586-924507f5656e",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClient",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48fcdcd1-a4db-4b39-a851-a8df637c8344",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClientServer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0238b08d-6fb4-4edb-b25b-17972e6c802f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClientServer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40bc37d3-a268-4308-a68a-0edb72609acf",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7c31f67-18b5-4bdb-a93c-feef93604f2c",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnToMainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Pointer>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Pointer>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}